<resources>
    <string name="app_name">笑一笑</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_refresh">刷新数据</string>
    <string name="action_exit">退出</string>

    <string name="img_save">保存图片</string>
    <string name="share">分享</string>
    <string name="cancel">取消</string>
    <string name="comment">评论</string>
    <string name="collect">收藏</string>
    <string name="collect_select">已收藏</string>

    <string name="history_today">今天</string>
    <string name="history_seven_day">七天内</string>
    <string name="history_earlier">更早以前</string>

    <string name="result_empty_text">暂无数据！</string>
    <string name="result_error_text">获取数据失败，点击重新获取数据！</string>

    <string name="share_wechat">微信</string>
    <string name="share_wxcircle">朋友圈</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_cancel">取消</string>
    <string name="share_title">分享给朋友</string>

    <string name="exit_app">再按一次返回键退出应用</string>

    <string name="fragment_sister">百思不得姐</string>
    <string name="fragment_beauty">美女</string>
    <string name="fragment_caricature">漫画</string>
    <string name="fragment_sina">微博榜</string>
    <string name="fragment_pear">梨视频</string>
    <string name="fragment_joke">笑话</string>
    <string name="fragment_my">我的</string>

    <string name="pear_comment_empty_text">沙发还空着？快来做啊！</string>
    <string name="pear_comment_more_text">查看更多</string>


    <string name="action_logout">注销</string>
    <string name="title_activity_login">登录</string>
    <string name="publish">发布</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="goods_discription">商品描述</string>
    <string name="seletct_a_pic">从相册选择一张照片</string>
    <string name="submit">提交</string>
    <string name="detail">详情</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码大于 4 位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="title_activity_register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="agree_text">登陆或注册即同意笑一笑[用户协议]</string>

    <string name="theme_pink_title">少女粉</string>
    <string name="theme_red_title">姨妈红</string>
    <string name="theme_yellow_title">咸蛋黄</string>
    <string name="theme_green_title">早苗绿</string>
    <string name="theme_blue_title">胖次蓝</string>
    <string name="theme_purple_title">基佬紫</string>
    <string name="theme_day_night_title">夜间模式</string>

    <string name="title_theme">主题</string>
    <string name="title_theme_dialog">@string/title_theme</string>
    <string name="title_day_night">夜间模式</string>
    <string name="title_night_auto">自动切换日夜间模式</string>
    <string name="title_night_follow_system">默认模式(跟随系统)</string>
    <string name="title_toast_close_night_follow_system">默认模式不可关闭</string>

    <string name="image_transition_name">image_transition_name</string>

    <!-- 合成 -->
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="setting_entries">
        <item>基本样式</item>
        <item>语音播放</item>
    </string-array>
    <string-array name="setting_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="theme_entries">
        <item>夜间模式</item>
        <item>自动切换日夜间模式</item>
        <item>主题</item>
    </string-array>
    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="play_entries">
        <item>发音人</item>
        <item>语速</item>
        <item>音调</item>
        <item>音量</item>
        <item>音频流类型</item>
        <item>音频打断音乐播放</item>
    </string-array>
    <string-array name="play_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
