<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/tool_bar_login_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginLeft="@dimen/y10"
            android:layout_marginRight="@dimen/y10" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y10"
            android:layout_marginTop="@dimen/x16"
            android:text="@string/login"
            android:textColor="@color/user_text_color"
            android:textSize="@dimen/x16"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y42"
            android:layout_marginLeft="@dimen/y32"
            android:layout_marginTop="@dimen/x16">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y42"
            android:layout_marginLeft="@dimen/y32">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/username_forget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/y12"
            android:layout_marginTop="@dimen/y8"
            android:text="@string/forget_password"
            android:textColor="@color/user_color"
            android:textSize="@dimen/y8" />

        <TextView
            android:id="@+id/username_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y32"
            android:layout_marginTop="@dimen/y20"
            android:text="@string/login"
            android:textColor="@color/user_color"
            android:textSize="@dimen/y10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/y32"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/y25"
                android:layout_height="@dimen/y25"
                android:src="@drawable/umeng_socialize_wechat" />

            <ImageView
                android:layout_width="@dimen/y25"
                android:layout_height="@dimen/y25"
                android:layout_marginLeft="@dimen/x19"
                android:src="@drawable/umeng_socialize_qzone" />

            <ImageView
                android:layout_width="@dimen/y25"
                android:layout_height="@dimen/y25"
                android:layout_marginLeft="@dimen/x19"
                android:src="@drawable/umeng_socialize_sina" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y17"
            android:layout_marginLeft="@dimen/y32"
            android:layout_marginTop="@dimen/y10"
            android:text="@string/agree_text"
            android:textColor="@color/user_color"
            android:textSize="@dimen/y8" />

    </LinearLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
